fix the logic behind the show title checkbox on the wt edit form

--- a/sites/all/themes/walkhub_theme/sass/page/_node-walkthrough-edit.sass
+++ b/sites/all/themes/walkhub_theme/sass/page/_node-walkthrough-edit.sass
@@ -16,7 +16,6 @@
     .tabledrag-toggle-weight,
     .field-name-field-fc-steps thead,
     #field-parameters-values thead,
-    .field-name-field-fc-step-name,
     #edit-field-proxy-warning-message-und-0-format,
     #adv-sett-proxy-param
       display: none
